fix: handle "default" role as regular role, fix roles preview, code cleanup and refactoring (#101)